@@ -4,7 +4,9 @@ import com.example.displaysystemspringboot.model.Calendar;
 import com.example.displaysystemspringboot.model.CalendarParser;
 import com.example.displaysystemspringboot.repository.CalendarRepository;
 import jakarta.annotation.PostConstruct;
+import org.dmfs.rfc5545.recur.InvalidRecurrenceRuleException;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
 import java.text.ParseException;
@@ -23,18 +25,12 @@ public class CalendarService {
     @Autowired
     private EventFilteringService eventFilteringService;
 
+    @Value("#{'${calendar.locations}'.split(',')}")
+    private List<String> locations;
+
     public CompletableFuture<List<Calendar>> getCalendars() {
         CompletableFuture<List<Calendar>> future = new CompletableFuture<>();
-        List<String> urls = Arrays.asList(
-                "https://webmail.kth.se/owa/calendar/sth_plan7_7319@ug.kth.se/Calendar/calendar.ics",
-                "https://webmail.kth.se/owa/calendar/sth_plan7_7320@ug.kth.se/Calendar/calendar.ics",
-                "https://webmail.kth.se/owa/calendar/sth_plan7_7327@ug.kth.se/Calendar/calendar.ics",
-                "https://webmail.kth.se/owa/calendar/sth_plan9_9504@ug.kth.se/Calendar/calendar.ics",
-                "https://webmail.kth.se/owa/calendar/sth_plan6_6316@ug.kth.se/Calendar/calendar.ics"
-
-
-                );
-
+        List<String> urls = generateUrls(locations);
         CompletableFuture<Void> fetchAll = fetchAndStoreCalendars(urls);
         fetchAll.thenCompose((Void) -> retrieveCalendarsFromDatabase())
                 .thenAccept(future::complete)
@@ -51,11 +47,16 @@ public class CalendarService {
 
         return future;
     }
+    private List<String> generateUrls(List<String> locations) {
+        return locations.stream()
+                .map(location -> "https://webmail.kth.se/owa/calendar/" + location + "@ug.kth.se/Calendar/calendar.ics")
+                .collect(Collectors.toList());
+    }
 
     private CompletableFuture<Void> fetchAndStoreCalendars(List<String> urls) {
         List<CompletableFuture<Void>> fetchFutures = urls.stream()
                 .map(this::fetchAndStoreCalendar)
-                .collect(Collectors.toList());
+                .toList();
         return CompletableFuture.allOf(fetchFutures.toArray(new CompletableFuture[0]));
     }
 
@@ -63,7 +64,9 @@ public class CalendarService {
         CompletableFuture<Void> future = new CompletableFuture<>();
         fetchCalendar(url)
                 .thenAccept(calendar -> {
-                    calendarRepository.save(calendar);
+                    if(!calendar.getEvents().isEmpty()){
+                        calendarRepository.save(calendar);
+                    }
                     future.complete(null);
                 })
                 .exceptionally(ex -> {
@@ -82,6 +85,8 @@ public class CalendarService {
                 future.complete(calendar);
             } catch (ParseException e) {
                 future.completeExceptionally(new RuntimeException("Error parsing calendar content from URL: " + url, e));
+            } catch (InvalidRecurrenceRuleException e) {
+                throw new RuntimeException(e);
             }
         });
         return future;
